istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-a
spec:
  host: nginx-a
  subsets:
  - name: v1
    labels:
      version: v1
