istio/nginx-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nginx.example.com"
    - "nginx.apps.cluster43.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-gateway
spec:
  hosts:
  - "nginx.example.com"
  - "nginx.apps.cluster43.example.com"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /a
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: nginx-deployment-a
  - match:
    - uri:
        prefix: /b
    rewrite: 
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: nginx-deployment-b
  - match:
    - uri:
        prefix: /c
    rewrite: 
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: nginx-deployment-c
  - route:
    - destination:
        port:
          number: 80
        host: nginx-deployment-b
      weight: 75
    - destination:
        port:
          number: 80
        host: nginx-deployment-a
      weight: 25
